<resources>
    <string name="app_name">Calculadora v1</string>
    <string name="zero">0</string>
    <string name="um">1</string>
    <string name="dois">2</string>
    <string name="tres">3</string>
    <string name="quatro">4</string>
    <string name="cinco">5</string>
    <string name="seis">6</string>
    <string name="sete">7</string>
    <string name="oito">8</string>
    <string name="nove">9</string>
    <string name="ponto">.</string>
    <string name="adicao">+</string>
    <string name="multiplicacao">x</string>
    <string name="divisao">/</string>
    <string name="subtracao">-</string>
    <string name="igual">=</string>
    <string name="AC">AC</string>
    <string name="C">C</string>
    <string name="Porcentagem">%</string>
    <string name="Raiz">R</string>
</resources>