<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/lcdTv"
            android:layout_weight="0.2"
            android:hint="@string/zero"
            android:text="@string/zero"
            android:inputType="numberDecimal"
            android:textAlignment="textEnd"
            android:textSize="50sp"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2">

        <Button
                android:id="@+id/acBt"
                style="@style/CalcButton"
                android:text="@string/AC"
                android:onClick="onClickAC"
                android:textColor="@android:color/holo_orange_light">
        </Button>

        <Button
                android:id="@+id/cBt"
                style="@style/CalcButton"
                android:text="@string/C"
                android:onClick="onClickC"
                android:textColor="@android:color/holo_orange_light">
        </Button>

        <Button
                android:id="@+id/porcentagemBt"
                style="@style/CalcButton"
                android:text="@string/Porcentagem"
                android:onClick="onClickPorcentagem"
                android:textColor="@android:color/holo_orange_light">
        </Button>

        <Button
                android:id="@+id/raizQuadradaBt"
                style="@style/CalcButton"
                android:text="@string/Raiz"
                android:onClick="onClickRaizQuadrada"
                android:textColor="@android:color/holo_orange_light">
        </Button>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:orientation="horizontal">
        <Button
                android:id="@+id/seteBt"
                style="@style/CalcButton"
                android:text="@string/sete"
                android:onClick="onClickButNum">

        </Button>
        <Button
                android:id="@+id/oitoBt"
                style="@style/CalcButton"
                android:text="@string/oito"
                android:onClick="onClickButNum">
        </Button>
        <Button
                android:id="@+id/noveBt"
                style="@style/CalcButton"
                android:text="@string/nove"
                android:onClick="onClickButNum">
        </Button>
        <Button
                android:id="@+id/adicaoBt"
                style="@style/CalcButton"
                android:textColor="@android:color/holo_orange_light"
                android:text="@string/adicao"
                android:onClick="onClickButAdicao">
        </Button>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:orientation="horizontal">
        <Button
                android:id="@+id/quatroBt"
                style="@style/CalcButton"
                android:text="@string/quatro"
                android:onClick="onClickButNum">
        </Button>
        <Button
                android:id="@+id/cincoBt"
                style="@style/CalcButton"
                android:text="@string/cinco"
                android:onClick="onClickButNum">
        </Button>
        <Button
                android:id="@+id/seisBt"
                style="@style/CalcButton"
                android:text="@string/seis"
                android:onClick="onClickButNum">
        </Button>
        <Button
                android:id="@+id/subtracaoBt"
                style="@style/CalcButton"
                android:textColor="@android:color/holo_orange_light"
                android:text="@string/subtracao"
                android:onClick="onClickButSubtracao">
        </Button>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:orientation="horizontal">
        <Button
                android:id="@+id/umBt"
                style="@style/CalcButton"
                android:text="@string/um"
                android:onClick="onClickButNum">
        </Button>
        <Button
                android:id="@+id/doisBt"
                style="@style/CalcButton"
                android:text="@string/dois"
                android:onClick="onClickButNum">
        </Button>
        <Button
                android:id="@+id/tresBt"
                style="@style/CalcButton"
                android:text="@string/tres"
                android:onClick="onClickButNum">
        </Button>
        <Button
                android:id="@+id/multiplicacaoBt"
                style="@style/CalcButton"
                android:textColor="@android:color/holo_orange_light"
                android:text="@string/multiplicacao"
                android:onClick="onClickButMultiplicacao">
        </Button>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:orientation="horizontal">
        <Button
                android:id="@+id/zeroBt"
                style="@style/CalcButton"
                android:text="@string/zero"
                android:layout_weight="2"
                android:onClick="onClickZeroPonto">
        </Button>
        <Button
                android:id="@+id/pontoBt"
                style="@style/CalcButton"
                android:textColor="@android:color/holo_orange_light"
                android:text="@string/ponto"
                android:onClick="onClickZeroPonto">
        </Button>
        <Button
                android:id="@+id/igualBt"
                style="@style/CalcButton"
                android:textColor="@android:color/holo_orange_light"
                android:text="@string/igual"
                android:onClick="onClickButResultado">
        </Button>
        <Button
                android:id="@+id/divisaoBt"
                style="@style/CalcButton"
                android:textColor="@android:color/holo_orange_light"
                android:text="@string/divisao"
                android:onClick="onClickButDivisao">
        </Button>
    </LinearLayout>

</LinearLayout>